@@ -1,3 +1,12 @@
+2008-02-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>
+
+	* bin/rclm2.in (Usage):
+	- commented out the help message about non-exext script.
+
+	* README:
+	- wrote about configuration for the environment and sample
+	scripts.
+
 2008-02-27  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
 	* m4:
